brat/test/golden/error/apply_two_thunks.brat.golden
Error in test/golden/error/apply_two_thunks.brat@9:9
go(n) = thunks(n)
        ^^^^^^^^^

  Internal error: Expected empty leftover function args, got:
  (a1 :: Int)

